--- a/scripts.html
+++ b/scripts.html
@@ -594,10 +594,10 @@
             </button>
             <ul class="nav-links">
                 <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord</span></a></li>
-                <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github</span></a></li>
+                <li><a href="https://github.com/aabbaaii13" target="_blank"><span>Github</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
                 <li><a href="https://abaui.vercel.app" target="_blank"><span>Home</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors.html" target="_blank"><span>Executors</span></a></li>
+                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors</span></a></li>
             </ul>
         </div>
     </nav>
@@ -611,7 +611,7 @@
         </div>
         <div class="script-card" data-name="Abaui Hub" data-game="Universal">
             <div class="script-image-container">
-                <img src="https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/imageeee.png" alt="Script Image" class="script-image">
+                <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/imageeee.png" alt="Script Image" class="script-image">
             </div>
             <div class="script-content">
                 <div class="script-header">
@@ -620,7 +620,7 @@
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://abaui.vecrel.app/raw/abauihub.lua"))()
+                    loadstring(game:HttpGet("https://abaui.vecrel.app/raw/abauihub"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -628,8 +628,8 @@
                         </svg>
                     </button>
                     <button class="raw-button" aria-label="Raw Script" 
-                        onclick="window.open('https://abaui.vercel.app/raw/abauihub.lua', '_blank')"
-                        data-scriptname="raw/asab">
+                        onclick="window.open('https://abaui.vercel.app/raw/abauihub', '_blank')"
+                        data-scriptname="raw/abauihub">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                             <polyline points="14 2 14 8 20 8"/>
@@ -643,7 +643,7 @@
         </div>
         <div class="script-card" data-name="Wild Hub" data-game="Universal">
             <div class="script-image-container">
-                <img src="https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/wildhubb.png" alt="Script Image" class="script-image">
+                <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/wildhubb.png" alt="Script Image" class="script-image">
             </div>
             <div class="script-content">
                 <div class="script-header">
@@ -652,7 +652,7 @@
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By Wild Wide (realsmexywide)</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://abaui.vecrel.app/raw/wildhub.lua"))()
+                    loadstring(game:HttpGet("https://abaui.vecrel.app/raw/wildhub"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -660,8 +660,8 @@
                         </svg>
                     </button>
                     <button class="raw-button" aria-label="Raw Script" 
-                        onclick="window.open('https://abaui.vercel.app/raw/wildhub.lua', '_blank')"
-                        data-scriptname="raw/asab">
+                        onclick="window.open('https://abaui.vercel.app/raw/wildhub', '_blank')"
+                        data-scriptname="raw/wildhub">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                             <polyline points="14 2 14 8 20 8"/>
@@ -675,7 +675,7 @@
         </div>
         <div class="script-card" data-name="ASAB" data-game="Steal a Brainrot">
             <div class="script-image-container">
-                <img src="https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/imageee.png" alt="Script Image" class="script-image">
+                <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/imageee.png" alt="Script Image" class="script-image">
             </div>
                 <div class="script-content">
                     <div class="script-header">
@@ -684,14 +684,14 @@
                     <p class="script-type">Steal a Brainrot</p>
                     <p class="script-author">Made By aabbaaii13/14</p>
                     <div class="script-code">
-                        loadstring(game:HttpGet("https://abaui.vercel.app/raw/asab.lua"))()
+                        loadstring(game:HttpGet("https://abaui.vercel.app/raw/asab"))()
                         <button class="copy-button" aria-label="Copy Script">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                             </svg>
                         <button class="raw-button" aria-label="Raw Script" 
-                            onclick="window.open('https://abaui.vercel.app/raw/asab.lua', '_blank')"
+                            onclick="window.open('https://abaui.vercel.app/raw/asab', '_blank')"
                             data-scriptname="raw/asab">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
@@ -726,7 +726,7 @@
                     <p class="script-type">Legacy FPE:S</p>
                     <p class="script-author">Made By aabbaaii13/14</p>
                     <div class="script-code">
-                        loadstring(game:HttpGet("https://abaui.vercel.app/raw/fpescript.lua"))()
+                        loadstring(game:HttpGet("https://abaui.vercel.app/raw/fpescript"))()
                         <button class="copy-button" aria-label="Copy Script">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -734,8 +734,8 @@
                             </svg>
                         </button>
                         <button class="raw-button" aria-label="Raw Script" 
-                            onclick="window.open('https://abaui.vercel.app/raw/fpescript.lua', '_blank')"
-                            data-scriptname="raw/asab">
+                            onclick="window.open('https://abaui.vercel.app/raw/fpescript', '_blank')"
+                            data-scriptname="raw/fpescript">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                                 <polyline points="14 2 14 8 20 8"/>
@@ -750,7 +750,7 @@
         </div>
         <div class="script-card" data-name="Abaui Searcher" data-game="Universal">
         <div class="script-image-container">
-                <img src="https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/imageeeee.png" alt="Script Image" class="script-image">
+                <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/imageeeee.png" alt="Script Image" class="script-image">
             </div>
             <div class="script-content">
                 <div class="script-header">
@@ -759,7 +759,7 @@
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://abaui.vercel.app/raw)abauisearcher.lua"))()
+                    loadstring(game:HttpGet("https://abaui.vercel.app/raw/abauisearcher"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -767,8 +767,8 @@
                         </svg>
                     </button>
                     <button class="raw-button" aria-label="Raw Script" 
-                        onclick="window.open('https://abaui.vercel.app/raw/abauisearcher.lua', '_blank')"
-                        data-scriptname="raw/asab">
+                        onclick="window.open('https://abaui.vercel.app/raw/abauisearcher', '_blank')"
+                        data-scriptname="raw/abauisearcher">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                             <polyline points="14 2 14 8 20 8"/>
@@ -782,16 +782,16 @@
         </div>
         <div class="script-card" data-name="Fps Counter" data-game="Universal">
         <div class="script-image-container">
-                <img src="https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/imagee.png" alt="Script Image" class="script-image">
+                <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/imagee.png" alt="Script Image" class="script-image">
             </div>
             <div class="script-content">
                 <div class="script-header">
-                    <h3 class="script-title">Fps Counter V1.5</h3>
+                    <h3 class="script-title">FPS Counter V1.5</h3>
                 </div>
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://abaui.vercel.app/raw/fpscounter.lua"))()
+                    loadstring(game:HttpGet("https://abaui.vercel.app/raw/fpscounter"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -799,8 +799,8 @@
                         </svg>
                     </button>
                     <button class="raw-button" aria-label="Raw Script" 
-                        onclick="window.open('https://abaui.vercel.app/raw/fpscounter.lua', '_blank')"
-                        data-scriptname="raw/asab">
+                        onclick="window.open('https://abaui.vercel.app/raw/fpscounter', '_blank')"
+                        data-scriptname="raw/fpscounter">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                             <polyline points="14 2 14 8 20 8"/>
@@ -812,18 +812,18 @@
                 </div>
             </div>
         </div>
-        <div class="script-card" data-name="FE FLY AND VFLY GUI" data-game="Universal">
+        <div class="script-card" data-name="Fe fly And Vfly Gui" data-game="Universal">
         <div class="script-image-container">
-                <img src="https://raw.githubusercontent.com/CaseohCASEOH/aabbaaii/refs/heads/main/image.png" alt="Script Image" class="script-image">
+                <img src="https://raw.githubusercontent.com/aabbaaii13/aabbaaii/refs/heads/main/image.png" alt="Script Image" class="script-image">
             </div>
             <div class="script-content">
                 <div class="script-header">
-                    <h3 class="script-title">FE FLY AND VFLY GUI</h3>
+                    <h3 class="script-title">Fe fly And Vfly Gui</h3>
                 </div>
                 <p class="script-type">Universal Script</p>
                 <p class="script-author">Made By aabbaaii13/14</p>
                 <div class="script-code">
-                    loadstring(game:HttpGet("https://abaui.vercel.app/raw/fevflyandflygui.lua"))()
+                    loadstring(game:HttpGet("https://abaui.vercel.app/raw/fevflyandflygui"))()
                     <button class="copy-button" aria-label="Copy script">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
@@ -831,8 +831,8 @@
                         </svg>
                     </button>
                     <button class="raw-button" aria-label="Raw Script" 
-                        onclick="window.open('https://abaui.vercel.app/raw/fevflyandflygui.lua', '_blank')"
-                        data-scriptname="raw/asab">
+                        onclick="window.open('https://abaui.vercel.app/raw/fevflyandflygui', '_blank')"
+                        data-scriptname="raw/feflyandvflygui">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                             <polyline points="14 2 14 8 20 8"/>
