--- a/index.html
+++ b/index.html
@@ -6,523 +6,14 @@
     <title>Abaui - Roblox Exploit Community</title>
     <meta property="og:title" content="Abaui - Home">
     <meta property="og:description" content="New Roblox Website For Exploiters. We Have a Our Scripts, (Not Ours) Executors, Community Scripts And Maybe More.">
-    <meta property="og:image" content="https://abaui.vercel.app/abaui.png">
+    <meta property="og:image" content="https://abaui.vercel.app/icons/abaui.png">
     <meta property="og:url" content="https://abaui-community.vercel.app">
     <meta property="og:type" content="website">
-    <link rel="icon" href="abaui.png" type="image/png">
+    <link rel="icon" href="icons/abaui.png" type="image/png">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@900,700,500,400&f[]=general-sans@500,600,700&f[]=clash-display@600,500&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary: #ffffff;
-            --secondary: #f8fafc;
-            --accent: #0ea5e9;
-            --text: #0f172a;
-            --surface: rgba(255, 255, 255, 0.7);
-            --gradient: linear-gradient(135deg, #0ea5e9, #6366f1);
-            --bg-gradient: linear-gradient(135deg, #f8fafc, #ffffff);
-            --text-shadow: 0 0 20px rgba(14, 165, 233, 0.2);
-            --hover-gradient: linear-gradient(135deg, #6366f1, #0ea5e9);
-            --hero-bg: rgba(255, 255, 255, 0.7);
-            --nav-bg: rgba(255, 255, 255, 0.7);
-            --border-color: rgba(15, 23, 42, 0.05);
-            --hover-bg: rgba(14, 165, 233, 0.1);
-            --glow: 0 0 30px rgba(14, 165, 233, 0.15);
-            --shadow-lg: 0 20px 40px rgba(0, 0, 0, 0.05);
-            --transition: cubic-bezier(0.16, 1, 0.3, 1);
-        }
-        [data-theme="dark"] {
-            --primary: #0f172a;
-            --secondary: #1e293b;
-            --accent: #38bdf8;
-            --text: #f8fafc;
-            --surface: rgba(15, 23, 42, 0.7);
-            --gradient: linear-gradient(135deg, #38bdf8, #6366f1);
-            --bg-gradient: linear-gradient(135deg, #0f172a, #1e293b);
-            --text-shadow: 0 0 20px rgba(56, 189, 248, 0.2);
-            --hover-gradient: linear-gradient(135deg, #6366f1, #38bdf8);
-            --hero-bg: rgba(15, 23, 42, 0.7);
-            --nav-bg: rgba(15, 23, 42, 0.7);
-            --border-color: rgba(255, 255, 255, 0.05);
-            --hover-bg: rgba(56, 189, 248, 0.1);
-            --glow: 0 0 30px rgba(56, 189, 248, 0.15);
-        }
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        ::selection {
-            background: var(--accent);
-            color: white;
-        }
-        body {
-            font-family: 'General Sans', sans-serif;
-            background: var(--bg-gradient);
-            color: var(--text);
-            line-height: 1.5;
-            overflow-x: hidden;
-            min-height: 100vh;
-        }
-        .nav {
-            position: fixed;
-            width: 100%;
-            padding: 1.25rem 7%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: var(--nav-bg);
-            backdrop-filter: blur(10px) saturate(180%);
-            -webkit-backdrop-filter: blur(10px) saturate(180%);
-            z-index: 1000;
-            transform: translateY(-100%);
-            animation: slideDown 1s var(--transition) forwards;
-            border-bottom: 1px solid var(--border-color);
-        }
-        .logo {
-            font-family: 'Clash Display', sans-serif;
-            font-size: 1.5rem;
-            font-weight: 600;
-            background: var(--gradient);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            position: relative;
-            letter-spacing: -0.02em;
-            transition: all 1s ease;
-        }
-        .logo:hover {
-            background: var(--hover-gradient);
-            -webkit-background-clip: text;
-            background-clip: text;
-            text-shadow: var(--text-shadow);
-            transform: translateY(-1px);
-        }
-        .nav-controls {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-        .nav-links {
-            display: flex;
-            gap: 0.5rem;
-            list-style: none;
-        }
-        .nav-links a {
-            color: var(--text);
-            text-decoration: none;
-            font-size: 0.95rem;
-            font-weight: 500;
-            opacity: 0.8;
-            transition: all 1s var(--transition);
-            padding: 0.5rem 1rem;
-            border-radius: 8px;
-            position: relative;
-            overflow: hidden;
-        }
-        .nav-links a:hover {
-            opacity: 1;
-            background: var(--hover-bg);
-            color: var(--accent);
-            transform: translateY(-2px);
-            box-shadow: var(--glow);
-            transition: all 1s var(--transition);
-            border-radius: 5px;
-        }
-        .nav-links a::after {
-            border-radius: 15px;
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background: var(--gradient);
-            transform: scaleX(0);
-            transform-origin: right;
-            transition: transform 1s var(--transition);
-        }
-        .nav-links a:hover::after {
-            transform: scaleX(1);
-            transform-origin: left;
-        }
-        .theme-toggle {
-            background: none;
-            border: none;
-            padding: 0.5rem;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-            border-radius: 9px;
-            color: var(--text);
-            transition: all 1s var(--transition);
-            position: relative;
-        }
-        .theme-toggle:hover {
-            background: var(--secondary);
-            transform: scale(1.1);
-        }
-        .theme-toggle:active {
-            transform: scale(0.9);
-        }
-        .theme-toggle svg {
-            width: 20px;
-            height: 20px;
-            transition: all 1s var(--transition);
-        }
-        .theme-toggle .moon {
-            display: none;
-        }
-        [data-theme="dark"] .theme-toggle .sun {
-            display: none;
-        }
-        [data-theme="dark"] .theme-toggle .moon {
-            display: block;
-        }
-        /*.background-shapes {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            pointer-events: none;
-        }
-        .shape {
-            position: absolute;
-            border-radius: 50%;
-            background: var(--gradient);
-            filter: blur(80px);
-            opacity: 0.1;
-            mix-blend-mode: overlay;
-        }
-        .shape-1 {
-            top: 10%;
-            left: 10%;
-            width: 400px;
-            height: 400px;
-            animation: floatAnimation 20s ease-in-out infinite;
-        }
-        .shape-2 {
-            bottom: 10%;
-            right: 10%;
-            width: 300px;
-            height: 300px;
-            animation: floatAnimation 15s ease-in-out infinite reverse;
-        }*/
-        header {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0 1.5rem;
-            position: relative;
-            overflow: hidden;
-        }
-        .hero {
-            text-align: center;
-            max-width: 800px;
-            padding: 4rem;
-            background: var(--surface);
-            backdrop-filter: blur(20px) saturate(180%);
-            -webkit-backdrop-filter: blur(20px) saturate(180%);
-            border-radius: 24px;
-            border: 1px solid var(--border-color);
-            box-shadow: var(--shadow-lg);
-            transform-style: preserve-3d;
-            transform: perspective(1000px) translateZ(0);
-            transition: all 1s var(--transition);
-            will-change: transform;
-        }
-        .hero:hover {
-            transform: perspective(1000px) translateZ(50px) rotateX(2deg);
-            box-shadow: var(--shadow-lg), var(--glow);
-        }
-        .hero h2 {
-            font-family: 'Clash Display', sans-serif;
-            font-size: 4.1rem;
-            font-weight: 600;
-            line-height: 1;
-            margin-bottom: 1.5rem;
-            background: var(--gradient);
-            background-size: 300% 100%;
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: 
-                heroFadeUp 1s var(--transition) forwards,
-                textGradientSlide 8s linear infinite;
-            text-shadow: var(--text-shadow);
-            position: relative;
-            padding-bottom: 2rem;
-        }
-        .hero h2::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%) scaleX(0);
-            width: 400px;
-            height: 2px;
-            background: var(--gradient);
-            transition: transform 1s var(--transition);
-        }
-        .hero:hover h2::after {
-            transform: translateX(-50%) scaleX(1);
-        }
-        .hero p {
-            font-size: 1.75rem;
-            margin-bottom: 2.5rem;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: heroFadeUp 1s var(--transition) forwards 0.2s;
-            background: linear-gradient(90deg, var(--text) 0%, var(--text) 50%, var(--accent) 50%, var(--accent) 100%);
-            background-size: 200% 100%;
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            transition: all 1s var(--transition);
-        }
-        .hero:hover p {
-            background-position: -100% 0;
-            transform: translateY(-2px);
-        }
-        @keyframes textGradientSlide {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-        @keyframes floatAnimation {
-            0%, 100% { 
-                transform: translate(0, 0) rotate(0deg); 
-                opacity: 0.1;
-            }
-            50% { 
-                transform: translate(-20px, 20px) rotate(5deg); 
-                opacity: 0.15;
-            }
-        }
-        @keyframes slideDown {
-            from { transform: translateY(-100%); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-        @keyframes heroFadeUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        @media (max-width: 768px) {
-            .nav {
-                padding: 1.25rem 5%;
-            }
-            .nav-links {
-                display: flex;
-                position: fixed;
-                top: 0;
-                right: 0;
-                height: 100vh;
-                background: var(--surface);
-                backdrop-filter: blur(10px);
-                padding: 5rem 2rem;
-                min-width: 250px;
-                flex-direction: column;
-                gap: 1rem;
-                transform: translateX(100%);
-                transition: transform 0.3s ease;
-            }
-
-            .nav-links.active {
-                transform: translateX(0);
-            }
-            .menu-toggle {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                background: none;
-                border: none;
-                padding: 0;
-                margin-left: 0.5rem;
-                width: 40px;
-                height: 40px;
-                cursor: pointer;
-                position: relative;
-                z-index: 2050;
-                transition: background 0.5s;
-                transition: transform 0.5s;
-            }
-            .menu-toggle:hover {
-                transform: scale(0.9);
-            }
-            .menu-toggle span {
-                display: block;
-                width: 30px;
-                height: 2px;
-                background: var(--text);
-                border-radius: 10px;
-                margin: 4px 0;
-                transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-                position: relative;
-            }
-            .menu-toggle.active span:nth-child(1) {
-                transform: translateY(9.5px) rotate(45deg);
-            }
-            .menu-toggle.active span:nth-child(2) {
-                opacity: 0;
-            }
-            .menu-toggle.active span:nth-child(3) {
-                transform: translateY(-9.5px) rotate(-45deg);
-            }
-            .hero {
-                padding: 5rem 5rem;
-                margin: 1rem;
-            }
-            .hero h2 {
-                font-size: 3rem;
-                padding-bottom: 1.5rem;
-            }
-            .hero h2::after {
-                width: 200px;
-            }
-            .hero p {
-                font-size: 1.25rem;
-                margin-bottom: 2rem;
-            }
-        }
-        @media (max-width: 480px) {
-            .nav {
-                padding: 1rem 4%;
-            }
-            .logo {
-                font-size: 1.25rem;
-            }
-            .hero {
-                padding: 2rem 1.5rem;
-                margin: 0.5rem;
-            }
-            .hero h2 {
-                font-size: 2rem;
-                padding-bottom: 1.25rem;
-            }
-            .hero h2::after {
-                width: 150px;
-            }
-            .hero p {
-                font-size: 0.875rem;
-                margin-bottom: 1.5rem;
-            }
-            .nav-links {
-                min-width: 200px;
-                padding: 4rem 1.5rem;
-            }
-            .shape-1, .shape-2 {
-                width: 150px;
-                height: 150px;
-            }
-            .theme-toggle, .menu-toggle {
-                width: 30px;
-                height: 30px;
-            }
-            .theme-toggle svg, .menu-toggle svg {
-                width: 16px;
-                height: 16px;
-            }
-        }
-        @media (max-width: 360px) {
-            .hero h2 {
-                font-size: 1.75rem;
-            }
-            .hero p {
-                font-size: 0.75rem;
-            }
-            .nav-links {
-                min-width: 180px;
-            }
-        }
-        @media (min-width: 1024px) {
-            .hero {
-                max-width: 1000px;
-                padding: 6rem;
-            }
-            .hero h2 {
-                font-size: 5rem;
-            }
-            .hero p {
-                font-size: 2rem;
-            }
-        }
-        @media (min-width: 1440px) {
-            .nav {
-                padding: 1.5rem 10%;
-            }
-            .logo {
-                font-size: 1.75rem;
-            }
-            .hero {
-                max-width: 1200px;
-                padding: 7rem;
-            }
-            .hero h2 {
-                font-size: 6rem;
-            }
-        }
-        @media (min-width: 1920px) {
-            .nav {
-                padding: 1.75rem 12%;
-            }
-            .hero {
-                max-width: 1400px;
-            }
-            .shape-1 {
-                width: 600px;
-                height: 600px;
-            }
-            .shape-2 {
-                width: 500px;
-                height: 500px;
-            }
-        }
-        @media (min-width: 2000px) {
-            html {
-                font-size: 20px;
-            }
-            .hero {
-                max-width: 1800px;
-                padding: 6.5rem;
-            }
-            .hero h2 {
-                font-size: 7.5rem;
-            }
-            .hero p {
-                font-size: 2rem;
-            }
-        }
-        .version-text {
-            position: absolute;
-            top: 32.5%;
-            right: 100%;
-            font-size: 0.6rem;
-            opacity: 0.5;
-            color: var(--text);
-            pointer-events: none;
-            font-family: 'General Sans', sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/all.css">
 </head>
 <body>
-    <!-- <div class="background-shapes">
-        <div class="shape shape-1"></div>
-        <div class="shape shape-2"></div>
-    </div> -->
     <nav class="nav">
         <div class="logo">Abaui</div>
         <div class="nav-controls">
@@ -542,10 +33,10 @@
             </button>
             <ul class="nav-links">
                 <li><a href="https://discord.gg/hnq9AGVMwq" target="_blank"><span>Discord</span></a></li>
-                <li><a href="https://github.com/aabbaaii13" target="_blank"><span>Github</span></a></li>
+                <li><a href="https://github.com/CaseohCASEOH" target="_blank"><span>Github</span></a></li>
                 <li><a href="https://www.youtube.com/@aabbaaii13" target="_blank"><span>YouTube</span></a></li>
-                <li><a href="https://abaui.vercel.app/scripts" target="_blank"><span>Scripts</span></a></li>
-                <li><a href="https://abaui.vercel.app/executors" target="_blank"><span>Executors</span></a></li>
+                <li><a href="https://abaui.vercel.app/scripts.html" target="_blank"><span>Scripts</span></a></li>
+                <li><a href="https://abaui.vercel.app/executors.html" target="_blank"><span>Executors</span></a></li>
             </ul>
         </div>
     </nav>
@@ -595,4 +86,3 @@
     </script>
 </body>
 </html>
-
